Default to PIL to decode images when OpenCV is not installed.
PIL is lightweight and widely used, so it makes sense to support it as well.

The tests are parameterized to take into account all scenarii:
- both libraries are installed,
- only OpenCV,
- only Pillow.

PiperOrigin-RevId: 520253277

--- a/docs/tfless_tfds.ipynb
+++ b/docs/tfless_tfds.ipynb
@@ -443,9 +443,10 @@
       "cell_type": "markdown",
       "source": [
         "If you inspect elements, you will also notice that all features are already\n",
-        "decoded using NumPy. Behind the scenes, we use [Pillow](python-pillow.org) and\n",
-        "[OpenCV](https://opencv.org) (for 16-bit images only) to provide lightweight and\n",
-        "fast image decoding.\n",
+        "decoded using NumPy. Behind the scenes, we use [OpenCV](https://opencv.org)\n",
+        "by default because it is fast. If you don't have OpenCV installed, we default\n",
+        "to [Pillow](python-pillow.org) to provide lightweight and fast image\n",
+        "decoding.\n",
         "\n",
         "```\n",
         "{\n",
