--- a/docs/data_source.ipynb
+++ b/docs/data_source.ipynb
@@ -5,9 +5,7 @@
       "metadata": {
         "id": "g_nWetWWd_ns"
       },
-      "source": [
-        "##### Copyright 2023 The TensorFlow Datasets Authors."
-      ]
+      "source": ["##### Copyright 2023 The TensorFlow Datasets Authors."]
     },
     {
       "cell_type": "code",
@@ -36,9 +34,7 @@
       "metadata": {
         "id": "M7vSdG6sAIQn"
       },
-      "source": [
-        "# TFDS for Jax and PyTorch"
-      ]
+      "source": ["# TFDS for Jax and PyTorch"]
     },
     {
       "cell_type": "markdown",
@@ -136,34 +132,39 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "aLho3l_Vd0a5"
+      },
       "source": [
         "## Setup\n",
         "\n",
         "Let's install and import the needed dependencies:"
-      ],
-      "metadata": {
-        "id": "aLho3l_Vd0a5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "c4COEsqIdvYH"
+      },
+      "outputs": [],
       "source": [
         "!pip install array_record\n",
+        "!pip install grain-nightly\n",
+        "!pip install jax jaxlib\n",
         "!pip install tfds-nightly\n",
         "\n",
         "import os\n",
         "os.environ.pop('TFDS_DATA_DIR', None)\n",
         "\n",
         "import tensorflow_datasets as tfds"
-      ],
-      "metadata": {
-        "id": "c4COEsqIdvYH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CjEJeF1Id_JM"
+      },
       "source": [
         "## Data sources\n",
         "\n",
@@ -198,46 +199,44 @@
         "[`fashion_mnist`](https://www.tensorflow.org/datasets/catalog/fashion_mnist) is\n",
         "a common dataset for computer vision. To retrieve an ArrayRecord-based data\n",
         "source with TFDS, simply use:"
-      ],
-      "metadata": {
-        "id": "CjEJeF1Id_JM"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ds = tfds.data_source('fashion_mnist')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9Tslzx0_eEWx"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": ["ds = tfds.data_source('fashion_mnist')"]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "`tfds.data_source` is a convenient wrapper. It is equivalent to:"
-      ],
       "metadata": {
         "id": "AlaRrD_SeHLY"
-      }
+      },
+      "source": [
+        "`tfds.data_source` is a convenient wrapper. It is equivalent to:"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "duHDKzXReIKB"
+      },
+      "outputs": [],
       "source": [
         "builder = tfds.builder('fashion_mnist', file_format='array_record')\n",
         "builder.download_and_prepare()\n",
         "ds = builder.as_data_source()"
-      ],
-      "metadata": {
-        "id": "duHDKzXReIKB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rlyIsd0ueKjQ"
+      },
       "source": [
         "This outputs a dictionary of data sources:\n",
         "\n",
@@ -253,24 +252,24 @@
         "\n",
         "Let's check this by uninstalling TensorFlow and re-loading the data source\n",
         "in another subprocess:"
-      ],
-      "metadata": {
-        "id": "rlyIsd0ueKjQ"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip uninstall -y tensorflow"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "mTfSzvaQkSd9"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": ["!pip uninstall -y tensorflow"]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3sT5AN7neNT9"
+      },
+      "outputs": [],
       "source": [
         "%%writefile no_tensorflow.py\n",
         "import os\n",
@@ -287,160 +286,144 @@
         "print('...but the data source could still be loaded...')\n",
         "ds['train'][0]\n",
         "print('...and the records can be decoded.')"
-      ],
-      "metadata": {
-        "id": "3sT5AN7neNT9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python no_tensorflow.py"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "FxohFdb3kSxh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": ["!python no_tensorflow.py"]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1o8n-BhhePYY"
+      },
       "source": [
         "In future versions, we are also going to make the dataset preparation\n",
         "TensorFlow-free.\n",
         "\n",
         "A data source has a length:"
-      ],
-      "metadata": {
-        "id": "1o8n-BhhePYY"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(ds['train'])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qtfl17SQeQ7F"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": ["len(ds['train'])"]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Accessing the first element of the dataset:"
-      ],
       "metadata": {
         "id": "a-UFBu8leSMp"
-      }
+      },
+      "source": ["Accessing the first element of the dataset:"]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%timeit\n",
-        "ds['train'][0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "tFvT2Sx2eToh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": ["%%timeit\n", "ds['train'][0]"]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VTgZskyZeU_D"
+      },
       "source": [
         "...is just as cheap as accessing any other element. This is the definition of\n",
         "[random access](https://en.wikipedia.org/wiki/Random_access):"
-      ],
-      "metadata": {
-        "id": "VTgZskyZeU_D"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%timeit\n",
-        "ds['train'][1000]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cPJFa6aIeWcY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": ["%%timeit\n", "ds['train'][1000]"]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fs3kafYheX6N"
+      },
       "source": [
         "Features now use NumPy DTypes (rather than TensorFlow DTypes). You can inspect\n",
         "the features with:"
-      ],
-      "metadata": {
-        "id": "fs3kafYheX6N"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "features = tfds.builder('fashion_mnist').info.features"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "q7x5AEEaeZja"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": ["features = tfds.builder('fashion_mnist').info.features"]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VOnLqAZOeiBi"
+      },
       "source": [
         "You'll find more information about\n",
         "[the features in our documentation](https://www.tensorflow.org/datasets/api_docs/python/tfds/features).\n",
         "Here we can notably retrieve the shape of the images, and the number of classes:"
-      ],
-      "metadata": {
-        "id": "VOnLqAZOeiBi"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "shape = features['image'].shape\n",
-        "num_classes = features['label'].num_classes"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Xk8Vc-y0edlb"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "shape = features['image'].shape\n",
+        "num_classes = features['label'].num_classes"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "eFh8pytVemsu"
+      },
       "source": [
         "## Use in pure Python\n",
         "\n",
         "You can consume data sources in Python by iterating over them:"
-      ],
-      "metadata": {
-        "id": "eFh8pytVemsu"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ULjO-JDVefNf"
+      },
+      "outputs": [],
       "source": [
         "for example in ds['train']:\n",
         "  print(example)\n",
         "  break"
-      ],
-      "metadata": {
-        "id": "ULjO-JDVefNf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "gZRHZNOkenPb"
+      },
       "source": [
         "If you inspect elements, you will also notice that all features are already\n",
         "decoded using NumPy. Behind the scenes, we use [OpenCV](https://opencv.org)\n",
@@ -458,13 +441,13 @@
         "\n",
         "**Note**: Currently, the feature is only available for `Tensor`, `Image` and\n",
         "`Scalar` features. The `Audio` and `Video` features will come soon. Stay tuned!"
-      ],
-      "metadata": {
-        "id": "gZRHZNOkenPb"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8kLyK5j1enhc"
+      },
       "source": [
         "## Use with PyTorch\n",
         "\n",
@@ -477,37 +460,39 @@
         "[map-style datasets](https://pytorch.org/docs/stable/data.html#map-style-datasets).\n",
         "\n",
         "First we install and import Torch:"
-      ],
-      "metadata": {
-        "id": "8kLyK5j1enhc"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3aKol1fDeyoK"
+      },
+      "outputs": [],
       "source": [
         "!pip install torch\n",
         "\n",
         "from tqdm import tqdm\n",
         "import torch"
-      ],
-      "metadata": {
-        "id": "3aKol1fDeyoK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HKdJvYywe0YC"
+      },
       "source": [
         "We already defined data sources for training and testing (respectively,\n",
         "`ds['train']` and `ds['test']`). We can now define the sampler and the loaders:"
-      ],
-      "metadata": {
-        "id": "HKdJvYywe0YC"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_4P2JIrie23f"
+      },
+      "outputs": [],
       "source": [
         "batch_size = 128\n",
         "train_sampler = torch.utils.data.RandomSampler(ds['train'], num_samples=5_000)\n",
@@ -521,25 +506,25 @@
         "    sampler=None,\n",
         "    batch_size=batch_size,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "_4P2JIrie23f"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "EVhofOm4e53O"
+      },
       "source": [
         "Using PyTorch, we train and evaluate a simple logistic regression on the first\n",
         "examples:"
-      ],
-      "metadata": {
-        "id": "EVhofOm4e53O"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HcAmvMa-e42p"
+      },
+      "outputs": [],
       "source": [
         "class LinearClassifier(torch.nn.Module):\n",
         "  def __init__(self, shape, num_classes):\n",
@@ -577,24 +562,118 @@
         "  predicted_label = prediction.argmax(dim=1)\n",
         "  true_positives += (predicted_label == label).sum().item()\n",
         "print(f'\\nAccuracy: {true_positives/num_examples * 100:.2f}%')"
-      ],
-      "metadata": {
-        "id": "HcAmvMa-e42p"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Coming soon: use with JAX\n",
-        "\n",
-        "We are working closely with [Grain](https://github.com/google/grain). Grain is\n",
-        "an open-source, fast and deterministic data loader for Python. So stay tuned!"
-      ],
       "metadata": {
         "id": "ewKJQpwZe6Ik"
-      }
+      },
+      "source": [
+        "## Use with JAX\n",
+        "\n",
+        "[Grain](https://github.com/google/grain) is a library for reading data for\n",
+        "training and evaluating JAX models. It's open source, fast and deterministic.\n",
+        "Grain uses the source/sampler/loader paradigm, so we can re-use\n",
+        "`tfds.data_source`:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wG31LBso4IMv"
+      },
+      "outputs": [],
+      "source": [
+        "import grain.python as pygrain\n",
+        "import numpy as np\n",
+        "\n",
+        "data_source = tfds.data_source(\"fashion_mnist\", split=\"train\")\n",
+        "\n",
+        "# To shuffle the data, use a sampler:\n",
+        "sampler = pygrain.IndexSampler(\n",
+        "    num_records=5,\n",
+        "    num_epochs=1,\n",
+        "    shard_options=pygrain.NoSharding(),\n",
+        "    shuffle=True,\n",
+        "    seed=0,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RGrYQmdF4IMv"
+      },
+      "source": [
+        "Transformations are defined as classes and can be `BatchTransform`,\n",
+        "`FilterTransform` or `MapTransform`:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "NG6oyzc34IMv"
+      },
+      "outputs": [],
+      "source": [
+        "class ImageToText(pygrain.MapTransform):\n",
+        "  \"\"\"Maps an image to text.\"\"\"\n",
+        "\n",
+        "  LABEL_TO_TEXT = {\n",
+        "      0: \"zero\",\n",
+        "      1: \"one\",\n",
+        "      2: \"two\",\n",
+        "      3: \"three\",\n",
+        "      4: \"four\",\n",
+        "      5: \"five\",\n",
+        "      6: \"six\",\n",
+        "      7: \"seven\",\n",
+        "      8: \"height\",\n",
+        "      9: \"nine\",\n",
+        "  }\n",
+        "\n",
+        "  def map(self, element: dict[str, np.ndarray]) -> dict[str, np.ndarray]:\n",
+        "    label = element[\"label\"]\n",
+        "    text = self.LABEL_TO_TEXT[label]\n",
+        "    element[\"text\"] = text\n",
+        "    return element\n",
+        "\n",
+        "# You can chain transformations in a list:\n",
+        "operations = [ImageToText()]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "53U1d8Yj4IM9"
+      },
+      "source": [
+        "Finally, the data loader takes care of orchestrating the loading. You can scale\n",
+        "up with multiprocessing to enjoy both the flexibility of Python and the\n",
+        "performance of a data loader:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SQEP8Bhp4IM9"
+      },
+      "outputs": [],
+      "source": [
+        "loader = pygrain.DataLoader(\n",
+        "    data_source=data_source,\n",
+        "    operations=operations,\n",
+        "    sampler=sampler,\n",
+        "    worker_count=0,  # Scale to multiple workers in multiprocessing\n",
+        ")\n",
+        "\n",
+        "for element in loader:\n",
+        "  print(element[\"text\"])"
+      ]
     },
     {
       "cell_type": "markdown",
