--- a/docs/cli.ipynb
+++ b/docs/cli.ipynb
@@ -26,20 +26,20 @@
         "id": "grQeV-PZroqn"
       },
       "source": [
-        "\u003ctable class=\"tfo-notebook-buttons\" align=\"left\"\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://www.tensorflow.org/datasets/cli\"\u003e\u003cimg src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" /\u003eView on TensorFlow.org\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/datasets/blob/master/docs/cli.ipynb\"\u003e\u003cimg src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /\u003eRun in Google Colab\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://github.com/tensorflow/datasets/blob/master/docs/cli.ipynb\"\u003e\u003cimg src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /\u003eView source on GitHub\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca href=\"https://storage.googleapis.com/tensorflow_docs/datasets/docs/cli.ipynb\"\u003e\u003cimg src=\"https://www.tensorflow.org/images/download_logo_32px.png\" /\u003eDownload notebook\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "\u003c/table\u003e"
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/datasets/cli\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/datasets/blob/master/docs/cli.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/datasets/blob/master/docs/cli.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a href=\"https://storage.googleapis.com/tensorflow_docs/datasets/docs/cli.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
+        "  </td>\n",
+        "</table>"
       ]
     },
     {
@@ -115,7 +115,7 @@
         "## `tfds new`: Implementing a new Dataset\n",
         "\n",
         "This command will help you kickstart writing your new Python dataset by creating\n",
-        "a `\u003cdataset_name\u003e/` directory containing default implementation files.\n",
+        "a `<dataset_name>/` directory containing default implementation files.\n",
         "\n",
         "Usage:"
       ]
@@ -185,20 +185,20 @@
       "source": [
         "## `tfds build`: Download and prepare a dataset\n",
         "\n",
-        "Use `tfds build \u003cmy_dataset\u003e` to generate a new dataset. `\u003cmy_dataset\u003e` can be:\n",
+        "Use `tfds build <my_dataset>` to generate a new dataset. `<my_dataset>` can be:\n",
         "\n",
         "* A path to `dataset/` folder or `dataset.py` file (empty for current directory):\n",
         "  * `tfds build datasets/my_dataset/`\n",
-        "  * `cd datasets/my_dataset/ \u0026\u0026 tfds build`\n",
-        "  * `cd datasets/my_dataset/ \u0026\u0026 tfds build my_dataset`\n",
-        "  * `cd datasets/my_dataset/ \u0026\u0026 tfds build my_dataset.py`\n",
+        "  * `cd datasets/my_dataset/ && tfds build`\n",
+        "  * `cd datasets/my_dataset/ && tfds build my_dataset`\n",
+        "  * `cd datasets/my_dataset/ && tfds build my_dataset.py`\n",
         "\n",
         "* A registered dataset:\n",
         "\n",
         "  * `tfds build mnist`\n",
         "  * `tfds build my_dataset --imports my_project.datasets`\n",
         "\n",
-        "Note: `tfds build` has useful flags to help prototyping and debuging. See the `Debug \u0026 tests:` section bellow.\n",
+        "Note: `tfds build` has useful flags to help prototyping and debuging. See the `Debug & tests:` section bellow.\n",
         "\n",
         "Available options:"
       ]
